Created Position Reporter Script

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=FA445F8B4D4D8220DB9F108B6E8204F6
+CopyrightNotice=Copyright Marc Brout 2018
 
 [StartupActions]
 bAddPacks=True
