added debug line for grabbing items

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/MainMap.MainMap
 GameDefaultMap=/Game/MainMap.MainMap
-GlobalDefaultGameMode=/Script/LightsOut.LightsOutGameModeBase
+GlobalDefaultGameMode=/Game/Blueprints/LightsOutGameMode_BP.LightsOutGameMode_BP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -50,3 +50,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
+
